GPencil: mask fails to mask adjacent points #77871

Closed
opened 2020-06-15 02:17:22 +02:00 by guzu · 5 comments

System Information
Operating system: Mac (mini late 2014)
Graphics card: Intel Iris

Blender Version
Broken: 2.83 Alpha
Worked: I think it never did

Short description of error
When masking a point (or more) and move it in sculpt mode, one of the adjacent points can be moved as well.

Exact steps for others to reproduce the error

  • Create a grease pencil.
  • Draw a line.
  • Go to edit mode and select one point.
  • Go to sculpt mode.
  • Move that point with any of the tools.
  • Try to move the previous or next point.

You will notice one extra point acts as it has been masked.

**System Information** Operating system: Mac (mini late 2014) Graphics card: Intel Iris **Blender Version** Broken: 2.83 Alpha Worked: I think it never did **Short description of error** When masking a point (or more) and move it in sculpt mode, one of the adjacent points can be moved as well. **Exact steps for others to reproduce the error** - Create a grease pencil. - Draw a line. - Go to edit mode and select one point. - Go to sculpt mode. - Move that point with any of the tools. - Try to move the previous or next point. You will notice one extra point acts as it has been masked.
Author

Added subscriber: @guzu

Added subscriber: @guzu
guzu changed title from Grease pencil mask affects adjacent point to Grease pencil mask affects adjacent points 2020-06-15 02:19:24 +02:00
guzu changed title from Grease pencil mask affects adjacent points to Grease pencil mask fails to mask adjacent points 2020-06-15 02:23:24 +02:00
Antonio Vazquez changed title from Grease pencil mask fails to mask adjacent points to GPencil: mask fails to mask adjacent points 2020-06-15 08:27:23 +02:00
Antonio Vazquez self-assigned this 2020-06-15 11:09:50 +02:00

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

This issue was referenced by 76ebc608af

This issue was referenced by 76ebc608af7a89d2e9919d67ec6b639d47f70c1a

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Author

...I feel stunned. Amazing fix time 👍

...I feel stunned. Amazing fix time 👍
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#77871
No description provided.